# gaudi-pytorch-bridge

./: .gitignore  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  LICENSE.txt  README.md  README.txt  pyproject.toml  requirements.txt
backend/: CMakeLists.txt  backend_meta.cpp  backend_meta.h  create_pt_tensor.cpp  create_pt_tensor.h  habana_operator.cpp  habana_operator.h  jit_graph_cache.cpp  jit_graph_cache.h  jitgraph_utils.cpp  jitgraph_utils.h  kernel_recipe_signature.h  lazy_to_backend.h  random.cpp  random.h  scalar_cache.cpp  scalar_cache.h
backend/habana_device/: HPUAllocator.cpp  HPUAllocator.h  HPUDevice.cpp  HPUDevice.h  HPUEvent.cpp  HPUEvent.h  HPUGraph.cpp  HPUGraph.h  HPUGuardImpl.h  HPUHooksInterface.cpp  HPUHooksInterface.h  HPUStream.cpp  HPUStream.h  PinnedMemoryAllocator.cpp  PinnedMemoryAllocator.h  hpu_cached_devices.cpp  hpu_cached_devices.h  tensor_builder.h
backend/helpers/: cast_sequence.cpp  cast_sequence.h  collective_kernel_info.cpp  collective_kernel_info.h  collective_utils.cpp  collective_utils.h  compilation_statistics.cpp  compilation_statistics.h  create_tensor.cpp  create_tensor.h  dynamic_bucket_info.cpp  dynamic_bucket_info.h  dynamic_bucket_info_utils.cpp  dynamic_bucket_info_utils.h  dynamic_graph_utils.cpp  dynamic_graph_utils.h  dynamic_shape_infer.cpp  dynamic_shape_infer.h  dynamic_shape_info.cpp  dynamic_shape_info.h  eager_pipeline.h  enum_mapping_table.h  event_dispatcher.cpp  event_dispatcher.h  get_n_bytes.h  graph.h  habana_types.h  layout.h  lowering_util.cpp  lowering_util.h  runtime_config.cpp  runtime_config.h  symbolic_expression.cpp  symbolic_expression.h  tensor_info.cpp  tensor_info.h  tensor_shape.cpp  tensor_shape.h  tensor_utils.cpp  tensor_utils.h
backend/kernel/: constant_information.cpp  constant_information.h  control_edges_processing.cpp  control_edges_processing.h  ds_graph_recompile.cpp  ds_graph_recompile.h  hpu_habana_cache.cpp  hpu_habana_cache.h  hpu_habana_compile_op_pt.cpp  hpu_habana_compile_op_pt.h  hpu_habana_execute_op_pt.cpp  hpu_habana_execute_op_pt.h  hpu_habana_launch_op_pt.cpp  hpu_habana_launch_op_pt.h  hpu_habana_launch_op_pt_lowering.cpp  hpu_habana_launch_op_pt_sif.cpp  hpu_habana_launch_op_pt_sif_utils.cpp  hpu_habana_launch_op_pt_sif_utils.h  hpu_habana_meta_op_list.h  hpu_recipe_cache.cpp  hpu_recipe_cache.h  hpu_shape_inference.cpp  hpu_shape_inference.h  refinement_engine.cpp  refinement_engine.h
backend/passes/: hpu_habana_pass_interface.h  hpu_habana_persistence_marker_pass.cpp  hpu_habana_persistence_marker_pass.h  remove_inplace_ops.cpp  remove_inplace_ops.h  replace_inplace_ops_ds.cpp  replace_inplace_ops_ds.h
backend/profiling/: activity_profiler.h  json_activity_profiler.cpp  json_file_parser.cpp  json_file_parser.h  kineto_activity_profiler.cpp  profiling.cpp  profiling.h
backend/program/: create_executor.cpp  create_executor.h
backend/synapse_helpers/: CMakeLists.txt  RealTimeMemoryLogger.cpp  RealTimeMemoryLogger.h  algorithm.h  device.cpp  device.h  device_context.cpp  device_context.h  device_helpers.cpp  device_helpers.h  device_mem_reporter.h  device_mem_stats.h  device_memory.cpp  device_memory.h  device_types.h  devmem_logger.cpp  devmem_logger.h  env_flags.cpp  env_flags.h  env_flags_impl.h  event.cpp  event.h  event_handle_cache.cpp  event_handle_cache.h  graph.cpp  graph.h  habana_tensor.cpp  habana_tensor.h  hccl_communicator.cpp  hccl_communicator.h  host_memory.cpp  host_memory.h  layout_utils.h  lightweight_memory_usage_logger.cpp  lightweight_memory_usage_logger.h  logger_stub.cpp  mem_handle.cpp  mem_handle.h  mem_hlml.cpp  mem_hlml.h  (+28 more)
habana_eager/: CMakeLists.txt  eager_context.cpp  eager_context.h  eager_custom_op_register.cpp  eager_exec.cpp  eager_exec.h  eager_pipeline_utils.h  eager_tensor.cpp  eager_tensor.h  eager_view.cpp  eager_view.h  graph_dynamic.cpp  graph_dynamic.h  graph_dynamic_ops.cpp  graph_dynamic_ops.h  graph_exec.cpp  graph_exec.h  graph_exec_passes.h  graph_execs_group.cpp  graph_execs_group.h  graph_storage.cpp  graph_storage.h  graph_weight_permute.cpp  graph_weight_permute.h  helpers.h  kernels_impl.cpp  strided_dynamic_ops.cpp  unused_link_symbols.cpp  user_custom_op_frontend.cpp
habana_eager/ops/: as_strided.cpp  as_strided.h  bincount.cpp  bincount.h  complex.cpp  complex.h  copy_from.cpp  copy_from.h  eager_op.cpp  eager_op.h  empty.cpp  empty.h  index_put.cpp  index_put.h  instance_norm.cpp  instance_norm.h  linear.cpp  local_scalar_dense.cpp  local_scalar_dense.h  masked_select.cpp  masked_select.h  matmul.cpp  nonzero.cpp  nonzero.h  override_fns.h  pin_memory.cpp  repeat.cpp  repeat.h  set.cpp  set.h  unique.cpp  unique.h  unique2.cpp  unique2.h  view.cpp  view.h
habana_eager/passes/: add_attribute_alpha.cpp  detect_weights_tensors.cpp  get_outputs_order_in_graph.cpp  handle_input_views.cpp  handle_tupple_on_output.cpp  handle_views_insert_permute.cpp  handle_views_insert_permute.h  mark_params_as_const.cpp  remove_detach_op.cpp  remove_dummy_output.cpp  replace_dynamic_ops.cpp  replace_getitem_with_list_unpack.cpp  sanitize_graph_input.cpp
hpu_ops/: CMakeLists.txt  autocast_helpers.h  bincount.h  cpu_fallback.cpp  cpu_fallback.h  cpu_fallback_internal.h  ctc_loss_custom.h  custom_op_outshape.cpp  custom_op_outshape.h  custom_softmax.h  div_mod_util.h  dynamic_op.h  empty.h  expand.h  fbgemm.h  fp8_ops.h  fp8_utils.h  full.h  fused_clip_norm.h  habana_random_ops.h  hpu_op_helper.h  index_put.h  indexing_ops_helper.cpp  indexing_ops_helper.h  instance_norm.h  instance_norm_backward.h  int4_ops.h  kv_reorder.h  lazy_cast.h  linear.h  linear_backward.h  masked_batch_gemm.h  matmul.h  median_slice_util.h  mixture_of_experts.h  nms_batched.h  nonzero.h  op_backend.h  op_logger.cpp  op_logger.h  (+21 more)
hpu_ops/backend/: _add_relu_gen.cpp  _assert_async_gen.cpp  _efficientzerotensor_gen.cpp  _masked_scale_gen.cpp  adaptive_avg_pool2d_gen.cpp  adaptive_avg_pool3d_gen.cpp  add_composite_gen.cpp  addmm_gen.cpp  addmv_gen.cpp  addr_gen.cpp  all_gen.cpp  amax_amin_gen.cpp  (+206 more)
pytorch_helpers/: CMakeLists.txt  lazy_to_backend.cpp
(+1736 files in other folders)
